--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": "20.x"
+  },
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint"
+  },
+  "devDependencies": {
+    "turbo": "^1.13.2"
   }
 }
