--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint"
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "turbo": "^1.13.2"
+    "@eslint/js": "9.0.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.1",
+    "turbo": "^1.13.2",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.6.0"
   }
 }
