--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "next": "14.2.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.77",
+    "@types/react-dom": "18.2.25"
   }
 }
