--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "format": "prettier --write \"**/*.{js,ts,jsx,tsx,cjs,mjs,cts,mts,json}\" --ignore-path .gitignore",
     "lint": "eslint ."
   },
   "devDependencies": {
     "@eslint/js": "9.0.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "9.1.0",
+    "prettier": "3.2.5",
     "turbo": "^1.13.2",
     "typescript": "5.4.5",
     "typescript-eslint": "7.6.0"
