--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # turbo
 .turbo
 
+# local env files
+.env*.local
+
 # dependencies
 node_modules
 .pnp
@@ -12,11 +15,22 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# turbo
-.turbo
+# testing
+coverage
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
+
+# vercel
+.vercel
+
+# next.js
+.next
+out
+
+# production
+build
 
 # ide
 .idea
