--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@packages/database": "workspace:*",
     "@types/node": "20.12.7",
     "@types/react": "18.2.77",
     "@types/react-dom": "18.2.25"
