--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "9.1.0",
+    "lefthook": "1.6.10",
     "prettier": "3.2.5",
     "turbo": "^1.13.2",
     "typescript": "5.4.5",
