--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,10 +6,10 @@
     ".": "./src/client.ts"
   },
   "scripts": {
-    "dev": "tsx watch ./src/client.ts",
-    "format": "prisma format",
-    "generate": "prisma generate",
-    "studio": "prisma studio"
+    "db:format": "prisma format",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "5.12.1"
