--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -15,9 +15,6 @@
     "strict": true,
     "target": "ES2022"
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
