--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,4 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:best-practices"]
+  "extends": ["config:best-practices"],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["after 9am on monday", "before 12am on monday"]
 }
