--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@packages/database": "workspace:*",
+    "@packages/typescript-config": "workspace:*",
     "@types/node": "20.12.11",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0"
