--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "5.13.0"
   },
   "devDependencies": {
+    "@packages/typescript-config": "workspace:*",
     "@types/node": "20.12.11",
     "prisma": "5.13.0"
   }
