--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,20 +1,5 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "incremental": false,
-    "isolatedModules": true,
-    "lib": ["es2022", "DOM", "DOM.Iterable"],
-    "module": "NodeNext",
-    "moduleDetection": "force",
-    "moduleResolution": "NodeNext",
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "ES2022"
-  },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "extends": "@packages/typescript-config/base.json",
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
