--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "9.2.0",
     "@secretlint/secretlint-rule-preset-recommend": "8.2.4",
+    "@testing-library/jest-dom": "6.4.5",
+    "@testing-library/react": "15.0.7",
+    "@types/jest": "29.5.12",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "lefthook": "1.6.10",
     "prettier": "3.2.5",
     "secretlint": "8.2.4",
+    "ts-jest": "29.1.2",
     "turbo": "^1.13.3",
     "typescript": "5.4.5",
     "typescript-eslint": "7.8.0"
