--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
+    "globals": "15.2.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "lefthook": "1.6.10",
@@ -32,6 +33,6 @@
     "ts-jest": "29.1.2",
     "turbo": "^1.13.3",
     "typescript": "5.4.5",
-    "typescript-eslint": "7.8.0"
+    "typescript-eslint": "7.9.0"
   }
 }
