--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,10 +6,10 @@
     ".": "./src/client.ts"
   },
   "scripts": {
+    "dev": "prisma db push --skip-generate && prisma studio",
     "db:format": "prisma format",
     "db:generate": "prisma generate",
-    "db:push": "prisma db push --skip-generate",
-    "db:studio": "prisma studio"
+    "db:push": "prisma db push --skip-generate"
   },
   "dependencies": {
     "@prisma/client": "5.14.0"
