chore: add TZ to web service

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -14,6 +14,7 @@ services:
     command: ["pnpm", "dev"]
     environment:
       NODE_ENV: development
+      TZ: UTC
     ports:
       - 3000:3000
       - 5555:5555
