--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -7,10 +7,8 @@
   },
   "scripts": {
     "dev": "prisma studio",
-    "db:format": "prisma format",
-    "db:push": "prisma db push --skip-generate",
-    "generate": "prisma generate",
-    "migrate": "prisma migrate deploy"
+    "format": "prisma format",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@prisma/client": "5.14.0"
