--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "lefthook": "1.6.11",
+    "npm-run-all2": "6.2.0",
     "prettier": "3.2.5",
     "secretlint": "8.2.4",
     "ts-jest": "29.1.2",
