--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier": "3.3.2",
     "secretlint": "8.2.4",
     "ts-jest": "29.1.5",
-    "turbo": "^1.13.3",
+    "turbo": "1.13.4",
     "typescript": "5.4.5",
     "typescript-eslint": "7.9.0"
   }
