--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "ts-jest": "29.1.5",
     "turbo": "1.13.4",
     "typescript": "5.5.2",
-    "typescript-eslint": "7.14.1"
+    "typescript-eslint": "8.0.0-alpha.34"
   }
 }
