--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "14.2.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-8971381549-20240625",
+    "react-dom": "19.0.0-rc-8971381549-20240625"
   },
   "devDependencies": {
     "@packages/database": "workspace:*",
