--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "9.1.0",
     "globals": "15.6.0",
     "jest": "29.7.0",
