--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
+    "@types/node": "20.14.9",
     "eslint": "8.57.0",
     "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "9.1.0",
