--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,6 @@
   },
   "devDependencies": {
     "@packages/database": "workspace:*",
-    "@packages/typescript-config": "workspace:*",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0"
+    "@packages/typescript-config": "workspace:*"
   }
 }
