--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "9.1.0",
