--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,5 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
-  ]
+  ],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["after 10am on monday", "before 12am on monday"]
 }
