--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,7 +6,7 @@ pre-commit:
       run: pnpm eslint {staged_files}
     prettier:
       glob: "*.{js,ts,jsx,tsx,cjs,mjs,cts,mts,json}"
-      run: prettier --check {staged_files}
+      run: pnpm prettier --check {staged_files}
 
 # EXAMPLE USAGE:
 #
